# Rore

./: CONTRIBUTING.md  LICENSE  README.md  cargo.toml
Rore/: Cargo.toml
Rore syntax document/: code sample.docx  script.docx
Rore/rore-core/: Cargo.toml
Rore/rore-core/src/: app.rs  calculs.rs  lib.rs  state.rs  time.rs
Rore/rore-core/src/reactive/: command.rs  context.rs  memo.rs  mod.rs  resource.rs  signals.rs
Rore/rore-core/src/widgets/: base.rs  list.rs  mod.rs  portal.rs  show.rs  suspense.rs
Rore/rore-layout/: Cargo.toml
Rore/rore-layout/src/: lib.rs  mapper.rs  tree.rs
Rore/rore-library/: Cargo.toml
Rore/rore-library/src/: chart.rs  lib.rs  order_book.rs
Rore/rore-render/: Cargo.toml
Rore/rore-render/src/: camera.rs  cull.wgsl  custom_shader.rs  dynamic.rs  instance.rs  lib.rs  shader.wgsl  shader_image.wgsl  state.rs  texture.rs  vertex.rs
Rore/rore-text/: Cargo.toml
Rore/rore-text/src/: lib.rs  text.rs
Rore/rore-text/src/widgets/: animated.rs  box_widget.rs  button.rs  custom_paint.rs  liquid_glass.rs  mod.rs  router.rs  scroll_view.rs  shader_box.rs  text.rs  text_input.rs  theme.rs  transform.rs
Rore/rore-types/: Cargo.toml
Rore/rore-types/src/: base.rs  lib.rs  text.rs  ui.rs
Rore/sandbox/: Cargo.toml
Rore/sandbox/src/: main.rs
Rore7/: Cargo.toml
Rore7/rore-core/: Cargo.toml
Rore7/rore-core/src/: app.rs  lib.rs  scroll.rs  state.rs  time.rs
Rore7/rore-core/src/widgets/: base.rs  button.rs  input.rs  mod.rs  text.rs  view.rs
Rore7/rore-kit/: Cargo.toml
Rore7/rore-kit/src/: icon.rs  image.rs  lib.rs
Rore7/rore-layout/: Cargo.toml
Rore7/rore-layout/src/: mapper.rs  tree.rs
Rore7/rore-render/: Cargo.toml
Rore7/rore-render/src/: camera.rs  instance.rs  lib.rs  shader.wgsl  shader_image.wgsl  state.rs  text.rs  texture.rs
Rore7/rore-types/: Cargo.toml
Rore7/rore-types/src/: base.rs  events.rs  lib.rs
crates/rore-cli/client/: Cargo.toml
crates/rore-cli/client/src/: main.rs
crates/rore-core/core/: Cargo.toml
crates/rore-core/core/src/: lib.rs
crates/rore-layout/: Cargo.toml
crates/rore-layout/src/: convert.rs  engine.rs  lib.rs
crates/rore-macros/macros/: Cargo.toml
crates/rore-macros/macros/src/: lib.rs
crates/rore-premetives/: Cargo.toml
crates/rore-premetives/src/: accessibility.rs  animation.rs  background.rs  border.rs  color.rs  events.rs  geometry.rs  input.rs  layout.rs  lib.rs  style.rs  typography.rs
docs/: WHITEPAPER.md
examples/: data-grid  examples.md  stress-test
