[package]
name = "rore-library"
version = "0.1.0"
edition = "2021"

[dependencies]
rore-core = { path = "../rore-core" }
rore-layout = { path = "../rore-layout" }
rore-types = { path = "../rore-types" }
rore-text = { path = "../rore-text" }
glam = "*"
winit = "*"
rore-render = { path = "../rore-render" }
