[package]
name = "rore-layout"
version = "0.1.0"
edition = "2021"

[dependencies]
taffy = "0.5.2" # Eng yangi layout engine
log = "0.4"

# DIQQAT: Fayl yo'li sizning yangi strukturangizga moslandi:
# rore-layout papkasidan -> (..) -> rore-layout (parent) -> (..) -> Rore -> rore-primitives -> rore-primitives
rore-primitives = { path = "../../rore-primitives/rore-primitives" }